@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,10 +17,10 @@ public class FindJobCodeService {
     public List<JobCodeResponse> execute() {
         return codeRepository.findAllJobCode().stream()
                 .map(c-> JobCodeResponse.builder()
-                        .code(c.getCode())
+                        .code(c.getId())
                         .keyword(c.getKeyword())
                         .jobType(c.getJobType())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
